// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`unicodeBidi renders 0 1`] = `
Array [
  .c0 {
  unicode-bidi: 0;
}

<div
    className="c0"
  />,
  .c0 {
  unicode-bidi: 0;
}

<div
    className="c0"
  />,
  .c0 {
  unicode-bidi: 0;
}

<div
    className="c0"
  />,
  .c0 {
  unicode-bidi: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`unicodeBidi renders function 1`] = `
Array [
  .c0 {
  unicode-bidi: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  unicode-bidi: has;
}

<div
    className="c0"
  />,
  .c0 {
  unicode-bidi: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  unicode-bidi: has;
}

<div
    className="c0"
  />,
]
`;

exports[`unicodeBidi renders invalid theme path 1`] = `
Array [
  .c0 {
  unicode-bidi: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  unicode-bidi: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  unicode-bidi: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  unicode-bidi: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`unicodeBidi renders negative number 1`] = `
Array [
  .c0 {
  unicode-bidi: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  unicode-bidi: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  unicode-bidi: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  unicode-bidi: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`unicodeBidi renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  unicode-bidi: July;
}

@media screen and (min-width:November) {
  .c0 {
    unicode-bidi: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    unicode-bidi: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    unicode-bidi: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    unicode-bidi: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  unicode-bidi: July;
}

@media screen and (min-width:November) {
  .c0 {
    unicode-bidi: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    unicode-bidi: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    unicode-bidi: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    unicode-bidi: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  unicode-bidi: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    unicode-bidi: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    unicode-bidi: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    unicode-bidi: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    unicode-bidi: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  unicode-bidi: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    unicode-bidi: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    unicode-bidi: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    unicode-bidi: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    unicode-bidi: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`unicodeBidi renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    unicode-bidi: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    unicode-bidi: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    unicode-bidi: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    unicode-bidi: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    unicode-bidi: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    unicode-bidi: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    unicode-bidi: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    unicode-bidi: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    unicode-bidi: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    unicode-bidi: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    unicode-bidi: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    unicode-bidi: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    unicode-bidi: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    unicode-bidi: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    unicode-bidi: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    unicode-bidi: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`unicodeBidi renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  unicode-bidi: July;
}

@media May {
  .c0 {
    unicode-bidi: August;
  }
}

@media April {
  .c0 {
    unicode-bidi: September;
  }
}

@media January {
  .c0 {
    unicode-bidi: November;
  }
}

@media April {
  .c0 {
    unicode-bidi: August;
  }
}

@media June {
  .c0 {
    unicode-bidi: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  unicode-bidi: July;
}

@media May {
  .c0 {
    unicode-bidi: August;
  }
}

@media April {
  .c0 {
    unicode-bidi: September;
  }
}

@media January {
  .c0 {
    unicode-bidi: November;
  }
}

@media April {
  .c0 {
    unicode-bidi: August;
  }
}

@media June {
  .c0 {
    unicode-bidi: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  unicode-bidi: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    unicode-bidi: November;
  }
}

@media April {
  .c0 {
    unicode-bidi: January;
  }
}

@media January {
  .c0 {
    unicode-bidi: December;
  }
}

@media April {
  .c0 {
    unicode-bidi: April;
  }
}

@media June {
  .c0 {
    unicode-bidi: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  unicode-bidi: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    unicode-bidi: November;
  }
}

@media April {
  .c0 {
    unicode-bidi: January;
  }
}

@media January {
  .c0 {
    unicode-bidi: December;
  }
}

@media April {
  .c0 {
    unicode-bidi: April;
  }
}

@media June {
  .c0 {
    unicode-bidi: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`unicodeBidi renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    unicode-bidi: July;
  }
}

@media April {
  .c0 {
    unicode-bidi: August;
  }
}

@media January {
  .c0 {
    unicode-bidi: September;
  }
}

@media April {
  .c0 {
    unicode-bidi: November;
  }
}

@media June {
  .c0 {
    unicode-bidi: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    unicode-bidi: July;
  }
}

@media April {
  .c0 {
    unicode-bidi: August;
  }
}

@media January {
  .c0 {
    unicode-bidi: September;
  }
}

@media April {
  .c0 {
    unicode-bidi: November;
  }
}

@media June {
  .c0 {
    unicode-bidi: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    unicode-bidi: January;
  }
}

@media April {
  .c0 {
    unicode-bidi: December;
  }
}

@media January {
  .c0 {
    unicode-bidi: April;
  }
}

@media April {
  .c0 {
    unicode-bidi: May;
  }
}

@media June {
  .c0 {
    unicode-bidi: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    unicode-bidi: January;
  }
}

@media April {
  .c0 {
    unicode-bidi: December;
  }
}

@media January {
  .c0 {
    unicode-bidi: April;
  }
}

@media April {
  .c0 {
    unicode-bidi: May;
  }
}

@media June {
  .c0 {
    unicode-bidi: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`unicodeBidi renders postitive number 1`] = `
Array [
  .c0 {
  unicode-bidi: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  unicode-bidi: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  unicode-bidi: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  unicode-bidi: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`unicodeBidi renders string 1`] = `
Array [
  .c0 {
  unicode-bidi: July;
}

<div
    className="c0"
  />,
  .c0 {
  unicode-bidi: July;
}

<div
    className="c0"
  />,
  .c0 {
  unicode-bidi: June;
}

<div
    className="c0"
  />,
  .c0 {
  unicode-bidi: June;
}

<div
    className="c0"
  />,
]
`;

exports[`unicodeBidi renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`unicodeBidi renders valid theme path 1`] = `
Array [
  .c0 {
  unicode-bidi: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  unicode-bidi: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  unicode-bidi: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  unicode-bidi: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
